Fix indicated sort order for numeric columns

Previously, the ordering function was purposely inverted to ensure a certain
initial sort order for numeric columns. However, this causes the wrong sort
indicator icon to be displayed. The desired initial ordering can instead be
adjusted by exposing Qt::InitialSortOrderRole in the ProcessModel.

BUG: 470903